--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 Click==7.0
 dj-database-url==0.5.0
 Django==2.1
+djangorestframework==3.7.7
 django-extra-views==0.11.0
 django-haystack==2.8.1
 django-heroku==0.3.1
