--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
 dj-database-url==0.5.0
-Django==2.1
+Django==2.1.7
 django-extra-views==0.11.0
 django-haystack==2.8.1
 django-heroku==0.3.1
@@ -21,7 +21,7 @@ Flask==1.0.2
 gunicorn==19.9.0
 idna==2.7
 image==1.5.27
-ItsDangerous==1.0.0
+itsdangerous==1.1.0
 Jinja2==2.10
 jmespath==0.9.3
 MarkupSafe==1.0
